--- a/build.gradle
+++ b/build.gradle
@@ -76,26 +76,26 @@ dependencies {
     // =============== MOLECULER ===============
 
 	// Moleculer core (required)
-	implementation group: 'com.github.berkesa', name: 'moleculer-java', version: '1.2.5'
+	implementation group: 'com.github.berkesa', name: 'moleculer-java', version: '1.2.15'
 	    
     // ================ LOGGING ================
 	
 	// http://mvnrepository.com/artifact/org.slf4j/slf4j-api
-	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
        
 	// http://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14
-	implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.28'
+	implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.30'
 
 	// https://mvnrepository.com/artifact/org.slf4j/log4j-over-slf4j
-	implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.28'
+	implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.30'
 
 	// https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j
-	implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.28'
+	implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.30'
 
     // =========== ABLY.IO PUB/SUB =============
 	
 	// https://mvnrepository.com/artifact/io.ably/ably-java
-	implementation group: 'io.ably', name: 'ably-java', version: '1.1.8'
+	implementation group: 'io.ably', name: 'ably-java', version: '1.2.2'
 	
 }
 
@@ -104,8 +104,8 @@ targetCompatibility = 1.8
 
 group = 'com.github.berkesa'
 
-// version = '1.0.0-SNAPSHOT'
-version = '1.0.0'
+// version = '1.0.1-SNAPSHOT'
+version = '1.0.1'
 
 modifyPom {
     project {
@@ -133,13 +133,13 @@ modifyPom {
             dependency {
                 groupId 'com.github.berkesa'
                 artifactId 'moleculer-java'
-                version '1.2.5'
+                version '1.2.15'
                 scope 'runtime'
             }
             dependency {
                 groupId 'io.ably'
                 artifactId 'ably-java'
-                version '1.1.8'
+                version '1.2.2'
                 scope 'runtime'
             }
         }
@@ -168,4 +168,11 @@ compileJava {
 		executable = 'java'
 		jvmArgs = ['-classpath', project.configurations.ecj.asPath, 'org.eclipse.jdt.internal.compiler.batch.Main', '-nowarn']
 	}
+}
+
+// --- WAR ---
+
+jar {
+    baseName = 'moleculer-transporter-ably'
+    version = '1.0.1'
 }
